--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,7 @@ Network: Cloudflare Tunnel</pre>
             'read_file': '📄',
             'write_file': '✍️',
             'macos_notification': '🔔',
+            'take_screenshot': '📸',
             'control_volume': '🔊',
             'say_text': '🗣️',
             'open_url': '🌐'
